Add preserve_shebang argument

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ docs/source/transforms/*.min.py
 .cache/
 .pytest_cache/
 .circleci-config.yml
+.hypothesis/
+.coverage
+snippet.py
+snippet_min.py
